# rust-kv

./: Cargo.toml  README.md
src/: client.rs  entry.rs  error.rs  kvs.rs  lib.rs  resource.rs  server.rs  store.rs  threadpool.rs
src/engines/: kvs.rs  mod.rs  sled.rs  store.rs
tests/: cli.rs  generic.rs  kvstore.rs  tests.rs
