[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Anuj Srivastava <anuj.sixstrings@gmail.com>"]
description = "A key-value store based on principles of bitcask"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
failure = "0.1.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = {version = "5.0.0", features = ["stderr"] }
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
